[package]
name = "embers"
description = "A collection of helpful drivers for use in embedded Rust."
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/njfdev/embers"
readme = "README.md"

[lib]
crate-type = ["rlib"]

[dependencies]
embedded-io-async = ">=0.6.0, <0.8.0"
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }